Add SSLQueryComparison